# DCnRG_V2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ReportGenerator.spec  build_and_upload.py  create_manifest.py  main.py  main.spec  pyproject.toml  requirements.txt
.agents/: AGENTS.md
config/: color_space.yaml  configuration_example.yaml  data_path.yaml  expected_result.yaml  main.yaml  report_template.html  report_view.yaml  tests.yaml
config/device_configs/: 15iA.yaml  43_HKC.yaml  50UQ6031_REV1.yaml  SDF-50UQM8000MBA_CH23.yaml  SDF-55UQM8000MBA_CH23.yaml  SDF-65UQM8000MBA_CH23.yaml  SDMN-M27-IP01.yaml  SDMN-M27.yaml  SDNB-14X.yaml  SDNB-14X_GW01.yaml  SDNB-14iA_VK04.yaml  SDNB-15iA_VK04.yaml  SDNB-16iA.yaml  SDNB-16iA_GW03.yaml  SDX-43F3111_EL20.yaml  SDX-43U4169_CH19.yaml  SDX-50U4169_CH19.yaml  SDX-55U4169_CH19.yaml  SDX-65U4169_CH19.yaml
data/: NotTV.json  TV.json
data_examples/: HTSB02H30S05AA00022.json  HTSB02H30S05AA00031.json  HTSB02H30S05AA00044.json  HTSB02H30S05AA00047.json  HTSB02H30S05AA00051.json  HTSB02H30S05AA00057.json  HTSB02H30S05AA00084.json  NotTV.json  NotTV1.json  Real43HKC.json  TV1.json  TV_Inspection_SCREEN CHECK v5.0.xlsx
data_examples/43FF_202511011544/: TSDPB20S10AV011182.json  TSDPB20S10AV011197.json  TSDPB20S10AV011224.json
data_examples/50FF_202510301146/: TSDRB20S10AV006461.json  TSDRB20S10AV006585.json  TSDRB20S10AV006699.json
data_examples/55FF_202510281459/: TSDSB20S10AV008490.json
manifests/: report_generator_1.0.0.json
src/: calculate.py  graphics_helper.py  graphics_hepler.py  helpers.py  parse.py  report.py
(+91 files in other folders)
